basic event handler and SDK

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,10 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "baseUrl": ".",
+    "types": [
+      "@cloudflare/workers-types",
+      "jest"
+    ],
     "paths": {
       "@/*": [
         "src/*"
