--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "description": "",
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20241022.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.7.9",
     "jest": "^29.7.0",
