--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node dist/index.js",
     "docs": "typedoc --out docs src"
   },
+  "conditions": ["types"],
   "keywords": [],
   "author": "Britt Crawford <britt.v.crawford@gmail.com>",
   "license": "MIT",
