--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "teleprompter-sdk",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "scripts": {
     "test": "jest",
     "build": "tsc",
     "start": "node dist/index.js",
     "docs": "typedoc --out docs src"
   },
-  "conditions": ["types"],
+  "conditions": [
+    "types"
+  ],
   "keywords": [],
   "author": "Britt Crawford <britt.v.crawford@gmail.com>",
   "license": "MIT",
