--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20241022.0",
     "@types/jest": "^29.5.14",
+    "@types/mustache": "^4.2.5",
     "@types/node": "^22.7.9",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
     "typedoc": "^0.26.10",
     "typescript": "^5.6.3"
+  },
+  "dependencies": {
+    "mustache": "^4.2.0"
   }
 }
