--- a/.github/actions/styleguide-action/detect-documentation-root/action.yml
+++ b/.github/actions/styleguide-action/detect-documentation-root/action.yml
@@ -32,7 +32,7 @@ runs:
       id: detection
       working-directory: ${{ github.action_path }}
       run: |
-        node dist/index.js
+        node dist/index.cjs
       shell: bash
       env:
         GITHUB_WORKSPACE: ${{ github.workspace }}
