--- a/.github/actions/styleguide-action/generate-styleguide/action.yml
+++ b/.github/actions/styleguide-action/generate-styleguide/action.yml
@@ -26,7 +26,7 @@ runs:
     - name: Generate style guide
       working-directory: ${{ github.action_path }}
       run: |
-        node dist/index.js
+        node dist/index.cjs
       shell: bash
       env:
         GITHUB_WORKSPACE: ${{ github.workspace }}
